# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: mini_profile_builder.py
lecture_3/: student_grade_analyzer.py
lecture_4/: school.db  scripts.sql
lecture_5/: README.md  pyproject.toml
lecture_5/book_api/: books.db  database.py  main.py  models.py  schemas.py
